Add marshalling of GI_TYPE_TAG_VOID held in a GValue to int

Replace assertion for this case with a simple marshalling of the
pointer value to a Python int. While not particularly useful
this allows some callbacks in WebKit to function without causing
a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=694233